Implement basic login

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,10 +2,24 @@
   <div class="container">
     <%= link_to "sample app", root_path, id: "logo" %>
     <nav>
-      <ul class="navbar-nav navbar-expand mr-auto">
+      <ul class="nav navbar-nav navbar-expand-lg">
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "Help", help_path %></li>
-        <li><%= link_to "Log in", '#' %></li>
+        <% if logged_in? %>
+          <li><%= link_to "Users", '#' %></li>
+          <li>
+            <a href="#" class="dropdown-toggle" data_toggle="dropdown">
+              Account <b class="caret"></b>
+            </a>
+            <ul>
+              <li><%= link_to "Profile", current_user %></li>
+              <li><%= link_to "Settings", '#' %></li>
+              <li class="divider"></li>
+              <li><%= link_to "Log out", logout_path, method: :delete %></li>
+            </ul>
+          <% else %>
+            <li><%= link_to "Log in", login_path %></li>
+        <% end %>
       </ul>
     </nav>
   </div>
