Add password reset

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -172,8 +172,6 @@ input {
   }
 }
 
-/* forms */
-
 .checkbox {
   margin-top: 10px;
   margin-bottom: 10px;
@@ -198,4 +196,8 @@ input {
     padding: 10px 0;
     border-bottom: 1px solid gray;
   }
+}
+
+.btn {
+  margin-top: 15px;
 }
